--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <!-- PWA: Android/Chrome -->
     <meta name="mobile-web-app-capable" content="yes" />
-    <link rel="icon" type="image/png" sizes="192x192" href="image192.png" />
-    <link rel="icon" type="image/png" sizes="512x512" href="image512.png" />
+    <link rel="icon" type="image/png" sizes="192x192" href="192image.png" />
+    <link rel="icon" type="image/png" sizes="512x512" href="512image.png" />
 
     <!-- Optional: avoid phone number auto-detection on iOS -->
     <meta name="format-detection" content="telephone=no" />
